REQ-044 Ajustes pequenos